[workspace]
members = [
    # Packages
    "packages/sycamore",
    "packages/sycamore-macro",
    "packages/sycamore-reactive",

    # Examples
    "examples/components",
    "examples/context",
    "examples/counter",
    "examples/http-request",
    "examples/iteration",
    "examples/js-framework-benchmark",
    "examples/hello-world",
    "examples/higher-order-components",
    "examples/ssr",
    "examples/todomvc",
]
